--- a/src/less/index.less
+++ b/src/less/index.less
@@ -9,33 +9,51 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow: hidden;
-}
+/*body {
+  overflow-x: hidden; !*始终不显示x方向的滚动条*!
+  background-color: #fbf8f8;
+}*/
 
-body {
-  overflow-x: hidden; /*始终不显示x方向的滚动条*/
+/* 设置滚动条的样式 */
+/*body::-webkit-scrollbar {
+  width: 16px;
 }
+!* 滚动槽 *!
+body::-webkit-scrollbar-track {
+  background: #F1F1F1;
+}
+!* 滚动条滑块 *!
+body::-webkit-scrollbar-thumb {
+  background: #C0C0C0;
+}*/
 
 .wrap {
-  /*header*/
+  position: relative;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 300;
+  &::-webkit-scrollbar {
+    width: 16px;
+  }
   .header {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    background: #fff;
+    height: 71px;
+    background-color: rgba(255, 255, 255, .96);
     border-bottom: 1px solid #e5e5e5;
+    z-index: 200;
     .navbar {
       .logo {
         float: left;
         width: 280px;
         height: 65px;
-        //border: 1px solid red;
         background: url("../images/logo.png") no-repeat center;
         text-indent: -9999px;
       }
       .navbar-right {
-        //border-color: #e7e7e7;
         float: right;
-        //border: 1px solid red;
         width: 733px; // 728px
         height: 42px;
         margin-top: 10px;
@@ -80,9 +98,22 @@ body {
       }
     }
   }
+  .on{
+    animation: show 1s ease;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .12);
+  }
+  @keyframes show {
+    from {
+      transform: translateY(-100%) rotateX(90deg);
+    }
+    to {
+      transform: translateY(0) rotateX(0);
+    }
+  }
   /*banner*/
   .banner {
     position: relative;
+    margin-top: 66px;
     /*swiper*/
     .swiper-container {
       width: 100%;
@@ -110,7 +141,7 @@ body {
       position: relative;
       bottom: 422px;
       margin: 0 auto;
-      z-index: 998;
+      z-index: 100;
       //border: 1px solid red;
       > ul.server-list {
         width: 180px;
@@ -205,11 +236,10 @@ body {
   /*service*/
   .service-collection {
     .service-wrap {
-      background: #fff;
       width: 100%;
       padding-bottom: 20px;
-      &:nth-child(even) {
-        background: #fbf8f8;
+      &:nth-child(odd) {
+        background: #ffffff;
       }
       .service-container {
         width: 1200px;
@@ -435,6 +465,7 @@ body {
     text-align: center;
     padding-top: 50px;
     clear: both;
+    background: #fbf8f8;
     >.title {
       position: relative;
       bottom: 20px;
@@ -446,5 +477,43 @@ body {
       color: #1d1515;
       font-size: 18px;
     }
+    >ul.cooperation {
+      width: 1200px;
+      margin: 0 auto;
+      >li {
+        float: left;
+        width: 10%;
+        height: 60px;
+        text-align: center;
+        background: #fff;
+        margin-left: 1%;
+        line-height: 55px;
+        cursor: pointer;
+        &:first-child {
+          margin: 0;
+        }
+        >a{
+          display: inline-block;
+          width: 100%;
+          height: 100%;
+          >img {
+            width: 100%;
+            vertical-align: middle;
+          }
+        }
+      }
+      &:last-child{
+        padding-top: 20px;
+      }
+    }
+  }
+  /*address*/
+  .address{
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    font-style: normal;
+    color: #898989;
+    clear: both;
   }
 }
