--- a/src/less/index.less
+++ b/src/less/index.less
@@ -9,23 +9,10 @@
   box-sizing: border-box;
 }
 
-/*body {
-  overflow-x: hidden; !*始终不显示x方向的滚动条*!
+body {
+  overflow-x: hidden; /*始终不显示x方向的滚动条*/
   background-color: #fbf8f8;
-}*/
-
-/* 设置滚动条的样式 */
-/*body::-webkit-scrollbar {
-  width: 16px;
 }
-!* 滚动槽 *!
-body::-webkit-scrollbar-track {
-  background: #F1F1F1;
-}
-!* 滚动条滑块 *!
-body::-webkit-scrollbar-thumb {
-  background: #C0C0C0;
-}*/
 
 .wrap {
   position: relative;
@@ -36,9 +23,6 @@ body::-webkit-scrollbar-thumb {
     width: 16px;
   }
   .header {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 71px;
     background-color: rgba(255, 255, 255, .96);
@@ -66,6 +50,12 @@ body::-webkit-scrollbar-thumb {
             color: #121212;
             padding: 10px 15px;
             font-weight: 700;
+            &:hover {
+              color: #e94840;
+            }
+            &.active {
+              color: #e94840;
+            }
             > img {
               vertical-align: middle;
             }
@@ -75,13 +65,6 @@ body::-webkit-scrollbar-thumb {
             > #showCity {
               color: #000;
             }
-          }
-          > .home {
-            color: #e94840 !important;
-          }
-          > a:hover {
-            color: #e94840;
-            background-color: #fff;
           }
           &.shangjia-right {
             margin-right: 10px;
@@ -97,23 +80,17 @@ body::-webkit-scrollbar-thumb {
         }
       }
     }
-  }
-  .on{
-    animation: show 1s ease;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, .12);
-  }
-  @keyframes show {
-    from {
-      transform: translateY(-100%) rotateX(90deg);
-    }
-    to {
-      transform: translateY(0) rotateX(0);
+    &.fixation {
+      position: fixed;
+      top: 0;
+      left: 0;
     }
   }
+
   /*banner*/
   .banner {
     position: relative;
-    margin-top: 66px;
+    //margin-top: 66px;
     /*swiper*/
     .swiper-container {
       width: 100%;
@@ -431,10 +408,10 @@ body::-webkit-scrollbar-thumb {
     padding-top: 50px;
     height: 170px;
     background: #fff;
-    .footer-container{
+    .footer-container {
       width: 1200px;
       margin: 0 auto;
-      .hot-city{
+      .hot-city {
         float: left;
         font-family: " 微软雅黑";
         font-size: 18px;
@@ -459,14 +436,14 @@ body::-webkit-scrollbar-thumb {
     }
   }
   /*partner*/
-  .partner{
+  .partner {
     width: 100%;
     height: 130px;
     text-align: center;
     padding-top: 50px;
     clear: both;
     background: #fbf8f8;
-    >.title {
+    > .title {
       position: relative;
       bottom: 20px;
       text-align: left;
@@ -477,10 +454,11 @@ body::-webkit-scrollbar-thumb {
       color: #1d1515;
       font-size: 18px;
     }
-    >ul.cooperation {
+    > ul.cooperation {
       width: 1200px;
       margin: 0 auto;
-      >li {
+      clear: both;
+      > li {
         float: left;
         width: 10%;
         height: 60px;
@@ -492,23 +470,23 @@ body::-webkit-scrollbar-thumb {
         &:first-child {
           margin: 0;
         }
-        >a{
+        > a {
           display: inline-block;
           width: 100%;
           height: 100%;
-          >img {
+          > img {
             width: 100%;
             vertical-align: middle;
           }
         }
       }
-      &:last-child{
+      &:last-child {
         padding-top: 20px;
       }
     }
   }
   /*address*/
-  .address{
+  .address {
     height: 40px;
     line-height: 40px;
     text-align: center;
